--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>rolando.com</title>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="curso.css">
   <link rel="stylesheet" href="miPrueba.css">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap" 
@@ -58,7 +58,7 @@
     <div class="contenedor">
       <h2 class="subtitulo">Galeria</h2>
       <div class="contenedor-galeria">
-       <!-- <img src="C:/Users/river/Desktop/Imagenes/imagen_1.jpeg" alt=""class="img-galeria">
+       <img src="C:/Users/river/Desktop/Imagenes/imagen_1.jpeg" alt=""class="img-galeria">
         <img src="C:\Users\river\Desktop\Imagenes\imagen_2.png" alt=""class="img-galeria">
         <img src="C:\Users\river\Desktop\Imagenes\imagen_3.jpg" alt=""class="img-galeria">
         <img src="C:\Users\river\Desktop\Imagenes\imagen_4.jpeg" alt=""class="img-galeria">
@@ -71,7 +71,7 @@
         <img src="tecno.jpg" alt="" class="img-galeria">
         <img src="tecno.jpg" alt="" class="img-galeria">
         <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">-->
+        <img src="tecno.jpg" alt="" class="img-galeria">
       </div>
     </div>
   </section>
@@ -158,6 +158,7 @@
 
 <div class="jaa"></div>
 <script src="miPrueba.js"></script>
+<script src="menu.js"></script>
 <script src="lightbox.js"></script>
     </body>
 </html>
