--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="#contactos">Contactos</a>
   </nav>
   <div class="contenedor head">
-    <h1 class="titulo">convertimos tus sueños en realidad.</h1>
+    <h1 class="titulo">Convertimos tus sueños en realidad.</h1>
     <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
   </div>
 </header>
@@ -71,7 +71,7 @@
         <img src="tecno.jpg" alt="" class="img-galeria">
         <img src="tecno.jpg" alt="" class="img-galeria">
         <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
       </div>
     </div>
   </section>
