--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <img src="C:\Users\river\Desktop\Imagenes\imagen_6.jpg" alt=""class="img-galeria">
         <img src="pajoso.JPG" alt=""class="img-galeria">
         <img src="C:/Users/river/Desktop/Imagenes/chova.png" alt=""class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
-        <img src="tecno.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
         <img src="tecno2.jpg" alt="" class="img-galeria">
       </div>
     </div>
