--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>rolando.com</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="curso.css">
   <link rel="stylesheet" href="miPrueba.css">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -33,6 +34,8 @@
 <h2 class="subtitulo">Nuestro Servicio</h2>
 <div class="contenedor-servicio">
   <img src="checklist.svg" alt="">
+
+
   <div class="checklist-servicio">
     <div class="service">
       <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
@@ -52,7 +55,11 @@
          Suscipit aliquam maiores eos laborum quae dolor alias fuga. Soluta, quisquam voluptatem.</p>
     </div>
   </div>
+
+
+
 </div>
+
   </section>
   <section class="gallery" id="portafolio">
     <div class="contenedor">
