--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
     <div class="contenedor">
       <h2 class="subtitulo">Galeria</h2>
       <div class="contenedor-galeria">
-       <img src="C:/Users/river/Desktop/Imagenes/imagen_1.jpeg" alt=""class="img-galeria">
-        <img src="C:\Users\river\Desktop\Imagenes\imagen_2.png" alt=""class="img-galeria">
-        <img src="C:\Users\river\Desktop\Imagenes\imagen_3.jpg" alt=""class="img-galeria">
-        <img src="C:\Users\river\Desktop\Imagenes\imagen_4.jpeg" alt=""class="img-galeria">
-        <img src="C:\Users\river\Desktop\Imagenes\imagen_5.jpg" alt=""class="img-galeria">
-        <img src="C:\Users\river\Desktop\Imagenes\imagen_6.jpg" alt=""class="img-galeria">
-        <img src="pajoso.JPG" alt=""class="img-galeria">
-        <img src="C:/Users/river/Desktop/Imagenes/chova.png" alt=""class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
+       <img src="Imagenes/imagen_1.jpeg" alt=""class="img-galeria">
+        <img src="Imagenes/imagen_2.png" alt=""class="img-galeria">
+        <img src="Imagenes/imagen_3.jpg" alt=""class="img-galeria">
+        <img src="Imagenes/imagen_4.jpeg" alt=""class="img-galeria">
+        <img src="Imagenes/imagen_5.jpg" alt=""class="img-galeria">
+        <img src="Imagenes/imagen_6.jpg" alt=""class="img-galeria">
+        <img src="Imagenes/pajoso.JPG" alt=""class="img-galeria">
+        <img src="Imagenes/chova.png" alt=""class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
       </div>
     </div>
   </section>
@@ -136,28 +136,28 @@
   <div class="Cerrar">Cerrar</div>
   <h1>Mi prueba</h1>
   <div class="probando-galeria">
-    <img src="pajoso.JPG" alt=""  class="fotos">
-    <img src="rolando.png" alt="" class="fotos">
-    <img src="rolo23.jpg" alt=""  class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
-    <img src="popo.jpg" alt="" class="fotos">
+    <img src="Imagenes/pajoso.JPG" alt=""  class="fotos">
+    <img src="Imagenes/candida4.png" alt="" class="fotos">
+    <img src="Imagenes/vieja.png" alt=""  class="fotos">
+    <img src="imagenes/tecno1.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_7.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_8.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_9.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_10.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_11.png" alt="" class="fotos">
+    <img src="Imagenes/imagen_12.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_8.jpg" alt="" class="fotos">
+    <img src="Imagenes/chova.png" alt="" class="fotos">
+    <img src="Imagenes/candida4.png" alt="" class="fotos">
+    <img src="Imagenes/tecno2.jpg" alt="" class="fotos">
+    <img src="Imagenes/tecno1.jpg" alt="" class="fotos">
+    <img src="Imagenes/imagen_1.jpeg" alt="" class="fotos">
+    <img src="Imagenes/imagen_3.jpg" alt="" class="fotos">
   </div>
   
   <div class="fondo">
     <i class='bx bxs-chevrons-left cerrar'></i>
-      <img src="yoyi.jpg" alt="" class="poner-foto">
+      <img src="Imagenes/imagen_3.jpg" alt="" class="poner-foto">
   </div>
 
 </section>
