--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="contenedor">
       <h2 class="subtitulo">Galeria</h2>
       <div class="contenedor-galeria">
-       <img src="Imagenes/imagen_1.jpeg" alt=""class="img-galeria">
+       <img src="imagen_1.jpeg" alt=""class="img-galeria">
         <img src="Imagenes/imagen_2.png" alt=""class="img-galeria">
         <img src="Imagenes/imagen_3.jpg" alt=""class="img-galeria">
         <img src="Imagenes/imagen_4.jpeg" alt=""class="img-galeria">
