--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
       <h2 class="subtitulo">Galeria</h2>
       <div class="contenedor-galeria">
        <img src="imagen_1.jpeg" alt=""class="img-galeria">
-        <img src="Imagenes/imagen_2.png" alt=""class="img-galeria">
-        <img src="Imagenes/imagen_3.jpg" alt=""class="img-galeria">
-        <img src="Imagenes/imagen_4.jpeg" alt=""class="img-galeria">
-        <img src="Imagenes/imagen_5.jpg" alt=""class="img-galeria">
-        <img src="Imagenes/imagen_6.jpg" alt=""class="img-galeria">
-        <img src="Imagenes/pajoso.JPG" alt=""class="img-galeria">
-        <img src="Imagenes/chova.png" alt=""class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
-        <img src="Imagenes/tecno2.jpg" alt="" class="img-galeria">
+        <img src="imagen_2.png" alt=""class="img-galeria">
+        <img src="imagen_3.jpg" alt=""class="img-galeria">
+        <img src="imagen_4.jpeg" alt=""class="img-galeria">
+        <img src="imagen_5.jpg" alt=""class="img-galeria">
+        <img src="imagen_6.jpg" alt=""class="img-galeria">
+        <img src="pajoso.JPG" alt=""class="img-galeria">
+        <img src="chova.png" alt=""class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
+        <img src="tecno2.jpg" alt="" class="img-galeria">
       </div>
     </div>
   </section>
@@ -136,23 +136,23 @@
   <div class="Cerrar">Cerrar</div>
   <h1>Mi prueba</h1>
   <div class="probando-galeria">
-    <img src="Imagenes/pajoso.JPG" alt=""  class="fotos">
-    <img src="Imagenes/candida4.png" alt="" class="fotos">
-    <img src="Imagenes/vieja.png" alt=""  class="fotos">
-    <img src="imagenes/tecno1.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_7.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_8.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_9.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_10.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_11.png" alt="" class="fotos">
-    <img src="Imagenes/imagen_12.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_8.jpg" alt="" class="fotos">
-    <img src="Imagenes/chova.png" alt="" class="fotos">
-    <img src="Imagenes/candida4.png" alt="" class="fotos">
-    <img src="Imagenes/tecno2.jpg" alt="" class="fotos">
-    <img src="Imagenes/tecno1.jpg" alt="" class="fotos">
-    <img src="Imagenes/imagen_1.jpeg" alt="" class="fotos">
-    <img src="Imagenes/imagen_3.jpg" alt="" class="fotos">
+    <img src="pajoso.JPG" alt=""  class="fotos">
+    <img src="candida4.png" alt="" class="fotos">
+    <img src="vieja.png" alt=""  class="fotos">
+    <img src="tecno1.jpg" alt="" class="fotos">
+    <img src="imagen_7.jpg" alt="" class="fotos">
+    <img src="imagen_8.jpg" alt="" class="fotos">
+    <img src="imagen_9.jpg" alt="" class="fotos">
+    <img src="imagen_10.jpg" alt="" class="fotos">
+    <img src="imagen_11.png" alt="" class="fotos">
+    <img src="imagen_12.jpg" alt="" class="fotos">
+    <img src="imagen_8.jpg" alt="" class="fotos">
+    <img src="chova.png" alt="" class="fotos">
+    <img src="candida4.png" alt="" class="fotos">
+    <img src="tecno2.jpg" alt="" class="fotos">
+    <img src="tecno1.jpg" alt="" class="fotos">
+    <img src="imagen_1.jpeg" alt="" class="fotos">
+    <img src="imagen_3.jpg" alt="" class="fotos">
   </div>
   
   <div class="fondo">
