--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<html lang="en">
   <head>
     <title>rolando.com</title>
     <meta charset="UTF-8">
@@ -17,6 +18,7 @@
   <i class='bx bxs-image-alt imag'></i>
   <img src="hamburguesa.svg" alt="" class="hamburger">
   <nav class="menu-navegacion">
+    <div class="rt">x</div>
     <a href="#inicio">Inicio</a>
     <a href="#servicio">Servicio</a>
     <a href="#portafolio">Portafolio</a>
