--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         <img src="tecno2.jpg" alt="" class="img-galeria">
         <img src="tecno2.jpg" alt="" class="img-galeria">
         <img src="tecno2.jpg" alt="" class="img-galeria">
+    <img src="pro/saprissa.jpg" alt="" class="img-galeria">
+
       </div>
     </div>
   </section>
