--- a/index.html
+++ b/index.html
@@ -8,168 +8,12 @@
   <link rel="stylesheet" href="curso.css">
   <link rel="stylesheet" href="miPrueba.css">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap" 
-        rel="stylesheet">
+
+
     <style></style>
   </head>
     <body>
-      
-<header class="header" id="inicio">
-  <i class='bx bxs-image-alt imag'></i>
-  <img src="hamburguesa.svg" alt="" class="hamburger">
-  <nav class="menu-navegacion">
-    <div class="rt">x</div>
-    <a href="#inicio">Inicio</a>
-    <a href="#servicio">Servicio</a>
-    <a href="#portafolio">Portafolio</a>
-    <a href="#expertos">Expertos</a>
-    <a href="#contactos">Contactos</a>
-  </nav>
-  <div class="contenedor head">
-    <h1 class="titulo">Convertimos tus sueños en realidad.</h1>
-    <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-  </div>
-</header>
-
-<main>
-  <section class="services contenedor" id="servicio">
-<h2 class="subtitulo">Nuestro Servicio</h2>
-<div class="contenedor-servicio">
-  <img src="checklist.svg" alt="">
-
-
-  <div class="checklist-servicio">
-    <div class="service">
-      <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit?
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-         Suscipit aliquam maiores eos laborum quae dolor alias fuga. Soluta, quisquam voluptatem.</p>
-    </div>
-    <div class="service">
-      <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit?
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-         Suscipit aliquam maiores eos laborum quae dolor alias fuga. Soluta, quisquam voluptatem.</p>
-    </div>    <div class="service">
-      <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit?
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-         Suscipit aliquam maiores eos laborum quae dolor alias fuga. Soluta, quisquam voluptatem.</p>
-    </div>
-  </div>
-
-
-
-</div>
-
-  </section>
-  <section class="gallery" id="portafolio">
-    <div class="contenedor">
-      <h2 class="subtitulo">Galeria</h2>
-      <div class="contenedor-galeria">
-       <img src="imagen_1.jpeg" alt=""class="img-galeria">
-        <img src="imagen_2.png" alt=""class="img-galeria">
-        <img src="imagen_3.jpg" alt=""class="img-galeria">
-        <img src="imagen_4.jpeg" alt=""class="img-galeria">
-        <img src="imagen_5.jpg" alt=""class="img-galeria">
-        <img src="imagen_6.jpg" alt=""class="img-galeria">
-        <img src="pajoso.JPG" alt=""class="img-galeria">
-        <img src="chova.png" alt=""class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-        <img src="tecno2.jpg" alt="" class="img-galeria">
-    <img src="pro/saprissa.jpg" alt="" class="img-galeria">
-
-      </div>
-    </div>
-  </section>
-
-  <section class="imagen-light">
-    <img src="close.svg" alt="" class="close">
-    <img src="" alt="" class="agregar-imagen">
-  </section>
-
-  <section class="contenedor" id="expertos">
-    <h2 class="subtitulo">Expertos en:</h2>
-    <section class="experts">
-      <div class="cont-expert">
-        <img src="pie_chart.svg" alt="">
-        <h3 class="n-expert">Analytics</h3>
-      </div>
-
-      <div class="cont-expert">
-        <img src="search_engine.svg" alt="">
-        <h3 class="n-expert">Seo</h3>
-      </div> 
-
-     <div class="cont-expert">
-        <img src="security.svg" alt="">
-        <h3 class="n-expert">Security</h3>
-      </div>
-    </section>
-  </section>
-</main>
-
-<footer id="contactos">
-  <div class="contenedor footer-content">
-    <div class="contact-us">
-      <h2 class="brand">Rolando Rivera</h2>
-      <p>Somos expertos en la creacion de tus sueños.</p>
-    </div>
-    <div class="social-media">
-      <a href=""class="social-media-icon">
-        <i class='bx bxl-facebook' ></i>
-      </a>
-      <a href=""class="social-media-icon">
-        <i class='bx bxl-twitter' ></i>
-      </a>
-      <a href=""class="social-media-icon">
-        <i class='bx bxl-instagram' ></i>
-      
-      </a>
-    </div>
-  </div>
-  <div class="line"></div>
-</footer><br><br>
-
-
-<section class="sec" id="fotos">
-  <div class="Cerrar">Cerrar</div>
-  <h1>Mi prueba</h1>
-  <div class="probando-galeria">
-    <img src="pajoso.JPG" alt=""  class="fotos">
-    <img src="candida4.png" alt="" class="fotos">
-    <img src="vieja.png" alt=""  class="fotos">
-    <img src="tecno1.jpg" alt="" class="fotos">
-    <img src="imagen_7.jpg" alt="" class="fotos">
-    <img src="imagen_8.jpg" alt="" class="fotos">
-    <img src="imagen_9.jpg" alt="" class="fotos">
-    <img src="imagen_10.jpg" alt="" class="fotos">
-    <img src="imagen_11.png" alt="" class="fotos">
-    <img src="imagen_12.jpg" alt="" class="fotos">
-    <img src="imagen_8.jpg" alt="" class="fotos">
-    <img src="chova.png" alt="" class="fotos">
-    <img src="candida4.png" alt="" class="fotos">
-    <img src="tecno2.jpg" alt="" class="fotos">
-    <img src="tecno1.jpg" alt="" class="fotos">
-    <img src="imagen_1.jpeg" alt="" class="fotos">
-    <img src="imagen_3.jpg" alt="" class="fotos">
-  </div>
-  
-  <div class="fondo">
-    <i class='bx bxs-chevrons-left cerrar'></i>
-      <img src="Imagenes/imagen_3.jpg" alt="" class="poner-foto">
-  </div>
-
-</section>
-
-
-<div class="jaa"></div>
-<script src="miPrueba.js"></script>
-<script src="menu.js"></script>
-<script src="lightbox.js"></script>
+<p>hola</p>
+<img src="pro/saprissa.jpg" alt="">
     </body>
 </html>
