--- a/index.html
+++ b/index.html
@@ -5,16 +5,118 @@
     <title>rolando.com</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="curso.css">
-  <link rel="stylesheet" href="miPrueba.css">
-  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
-
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="ocultar-mostrar.css">
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <style></style>
   </head>
+
     <body>
-<p>hola</p>
-<img src="pro/saprissa.jpg" alt="">
-<img src="pro/calle-acoyapa.jpg" alt="">
+    <div class="cabeza" id="inicio">
+      <i class='bx bx-menu menu'></i>
+      <nav class="nav">
+        <i class='bx bx-x no'></i>
+        <li><a href="#inicio">inicio</a></li>
+        <li ><a href="#lectura">Lectura</a></li>
+        <li><a href="#fotos">fotos</a></li>
+        <li><a href="#videos">videos</a></li>
+        <li><a href="#adulto">Adulto</a></li>
+      </nav>
+      <h1>Compromiso Pasión y Dedicación.</h1>
+      <p>Si tú puedes, yo tambien puedo y si yo puedo, tu tambien puedes.</p>
+    </div>
+
+    <!--Cuerpo de la web-->
+
+    <div class="cuerpo">
+      <div class="lecturas" id="lectura">
+        <div class="lectura1">
+          <h1>Mis cosas</h1>
+          <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
+             vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
+             laboriosam rerum assumenda autem inventore adipisci eum.
+          </p>
+        </div>
+
+
+        <div class="lectura2">
+          <h1>Mis otras cosas</h1>
+          <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
+             vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
+             laboriosam rerum assumenda autem inventore adipisci eum.
+          </p>
+        </div>
+        <div class="lectura3">
+          <h1>Mis otras cosas</h1>
+          <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
+             vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
+             laboriosam rerum assumenda autem inventore adipisci eum.
+          </p>
+        </div>
+
+      </div>
+
+      <h2>Imagenes</h2>
+      <div class="fotos" id="fotos">
+
+        <div class="imagen uno">
+         <img src="pro/imagen_4.jpeg" alt="" class="fot">
+         <p class="parrafo_uno pa">Esta es la imagen cuatro</p>
+
+        </div>
+
+        <div class="imagen dos">
+          <img src="pro/barco.jpg" alt="" class="fot">
+          <p class="parrafo_dos pa">Ete es un barco encallado</p>
+
+         </div>
+
+         <div class="imagen tres ">
+          <img src="pro/camellos.jpg" alt="" class="fot">
+          <p class="parrafo_tres pa">Estos son unos camellos en la nube</p>
+
+         </div>
+
+         <div class="imagen cuatro">
+          <img src="pro/calle-acoyapa.jpg" alt="" class="fot">
+          <p class="parrafo_cuatro pa">Esta es una calle de la ciudad de Acoyapa</p>
+
+         </div>
+
+         <div class="imagen cinco">
+          <img src="pro/carpintera.jpg" alt="" class="fot">
+          <p class="parrafo_cinco pa">Esta es una calle en tres rios centro</p>
+
+         </div>
+         <div class="imagen seis">
+          <img src="pro/chicaMelena.jpg" alt="" class="fot">
+          <p class="parrafo_seis pa">Sta es una mujer con el pelo enorme</p>
+
+         </div>
+         <div class="imagen siete">
+          <img src="pro/chileCaliente.jpg" alt="" class="fot">
+          <p class="parrafo_siete pa">Este es un chile bastante esxitado</p>
+         </div>
+         <div class="imagen ocho">
+          <img src="pro/rotulo.jpg" alt="" class="fot">
+          <p class="parrafo_ocho pa">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+         </div>
+         <div class="imagen nueve">
+          <img src="pro/pastel.jpg" alt="" class="fot">
+          <p class="parrafo_nueve pa">Este es un patelito bien adornado</p>
+         </div>
+
+         <div class="fondo">
+          <span class="quitarFondo">x</span>
+           <img src="pro/leon.jpg" alt="" class="ponerFoto">
+         </div>
+    </div>
+
+
+    
+    <script src="index.js"></script>
     </body>
 </html>
