--- a/index.html
+++ b/index.html
@@ -8,30 +8,73 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="ocultar-mostrar.css">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" />
     <style></style>
   </head>
 
     <body>
+<div class="cajaMadre">
+      <!--Encabezado.-->
     <div class="cabeza" id="inicio">
       <i class='bx bx-menu menu'></i>
       <nav class="nav">
         <i class='bx bx-x no'></i>
+
+        <li><a href="#hora2" class="logoHora">Hora</a></li>
+        
         <li><a href="#inicio">inicio</a></li>
         <li ><a href="#lectura">Lectura</a></li>
         <li><a href="#fotos">fotos</a></li>
         <li><a href="#videos">videos</a></li>
         <li><a href="#adulto">Adulto</a></li>
+        <li><a href="#hora">Hora</a></li>
       </nav>
       <h1>Compromiso Pasión y Dedicación.</h1>
       <p>Si tú puedes, yo tambien puedo y si yo puedo, tu tambien puedes.</p>
     </div>
 
+
+<!--Reloj 2-->
+<div class="principal">
+  <i class='bx bx-x cerraR'></i>  
+    <div class="cajaDelReloj">
+    <div class="fecha" id="fecha"></div>
+    <div class="hora2" id="hora2"></div>
+    <div class="segundo" id="segundo"></div>
+    <div class="ampm" id="ampm"></div>
+  </div>
+</div>
     <!--Cuerpo de la web-->
 
-    <div class="cuerpo">
+
+  <div class="cuerpo">
       <div class="lecturas" id="lectura">
-        <div class="lectura1">
-          <h1>Mis cosas</h1>
+
+ 
+      <p>   
+          <video width="200px" height="200px" controls>
+        <source src="pro/fantasma.mp4" >
+      </video> <br> 
+      hola este video fue grabado en las afueras de estadio saprissa.
+    </p>
+
+        <div class="lectura1 lec">
+
+   <h1>Saprissa</h1>
+
+   <p>  Lorem ipsum dolor sit amet consectetur 
+    adipisicing elit. Suscipit ipsum perspiciatis harum, mollitia molestias at ab nesciunt. 
+    Aspernatur ullam nemo nihil commodi ab dignissimos, <img src="pro/saprissa.jpg" alt="" class="foti"> aliquam optio repellat vitae delectus unde
+     cumque libero nobis ratione sapiente voluptas numquam error officia enim maxime,
+      est atque quam repudiandae hic. Ratione quo natus, modi consequatur eveniet numquam?
+       Nostrum rerum minus eveniet nesciunt itaque iusto asperiores libero quis illo veniam 
+       doloribus reprehenderit, voluptate velit molestiae saepe nulla pariatur officia fugit.
+        Enim, alias? Praesentium fugit quas corporis maiores atque incidunt, porro,
+         et voluptates fugiat facilis nobis nemo, explicabo ad. Rerum nostrum itaque,
+          nihil eaque dolorem impedit.</p>
+        </div>
+        <div class="lectura2 lec">
+          <h1 class="h1"><a href="#lectura">Mis cosas</a></h1>
           <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
              vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
@@ -40,16 +83,16 @@
         </div>
 
 
-        <div class="lectura2">
-          <h1>Mis otras cosas</h1>
+        <div class="lectura3 lec">
+          <h1 class="h1">Mis otras cosas</h1>
           <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
              vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
              laboriosam rerum assumenda autem inventore adipisci eum.
           </p>
         </div>
-        <div class="lectura3">
-          <h1>Mis otras cosas</h1>
+        <div class="lectura4 lec">
+          <h1 class="h1">Mis otras cosas</h1>
           <p>La programación y mas que todo el desarrollo web es algo que me apasiona.
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
              vitae perferendis cum fugit recusandae reprehenderit provident laboriosam corrupti non minus sapiente, placeat sint nesciunt in commodi inventore accusamus dignissimos! Corrupti dolores voluptatum mollitia, amet, nisi officia omnis tenetur veniam facere minus aliquam eos,
@@ -114,9 +157,13 @@
            <img src="pro/leon.jpg" alt="" class="ponerFoto">
          </div>
     </div>
+ <!--super Eva-->
+ <div class="superEva">
+   <div class="eva">
 
-
-    
+   </div>
+ </div>
+  </div>
     <script src="index.js"></script>
     </body>
 </html>
