--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="ocultar-mostrar.css">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" />
     <style></style>
   </head>
 
@@ -50,13 +48,17 @@
   <div class="cuerpo">
       <div class="lecturas" id="lectura">
 
- 
-      <p>   
-          <video width="200px" height="200px" controls>
-        <source src="pro/fantasma.mp4" >
-      </video> <br> 
-      hola este video fue grabado en las afueras de estadio saprissa.
-    </p>
+ <div class="lectura0">
+   <h2>Hola Mamon</h2>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Dolore assumenda molestias, voluptatibus itaque,
+       impedit sit eaque earum consequuntur tempora sint libero excepturi obcaecati voluptates?
+        Nesciunt nam maiores quisquam explicabo illo doloribus libero alias repellendus minus!
+         Quia suscipit est deleniti omnis adipisci cum,
+      hic voluptates praesentium sunt aliquam tenetur distinctio pariatur.
+   </p>
+ </div>
+
 
         <div class="lectura1 lec">
 
