--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" /> -->
 
-    <link rel="stylesheet" href="index.css?r.4.8">
-    <link rel="stylesheet" href="style.css?r.2.1">
+    <link rel="stylesheet" href="index.css?r.4.10">
+    <link rel="stylesheet" href="style.css?r.2.2">
     <link rel="stylesheet" href="contador.css?r.2.2">
     <!-- <link rel="stylesheet" href="lokos.css"> -->
     <link rel="stylesheet" href="index_anim.css?r.0">
-    <link rel="stylesheet" href="index_medias.css?r.0">
+    <link rel="stylesheet" href="index_medias.css?r.1">
     <style>
       /* @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap'); */
       </style>
@@ -170,16 +170,15 @@ outa
   </div>
 </div>
 
-<!-- -----------------------------NUEVAS--------------------- -->
-<section class="nuevas">
-  <div class="nuevas_1">
-    <h4>Nota Importante.</h4>
+<!-- -----------------------------SLIDER--------------------- -->
+<section class="slider">
+  <div class="slider_1">
+    <h4>SLIDER.</h4>
     <!-- <h6>NOTICIA NUEVA</h6> -->
-    <div class="nuevo">Nuevo***</div>
-    <p>Quiero que sepas que estoy apenas aprendiendo desarrollo web, y que me impota un carajo 
-      lo que pienses de mi pequeña pagina web.<br> Total es practica, practica y mas practica.<br>
-      Jodete.!!
-    </p>
+    <!-- <div class="nuevo">Nuevo***</div> -->
+<canvas id="canvas" class="canvas" ></canvas><br>
+<p> <span class="flecha" > << </span> Desliza para mover la imagen <span class="flecha"> >> </span></p>
+<input type="range" id="input_slider" class="input_slider" value="1" min="1" max="21">
   </div>
 </section>
 
@@ -288,7 +287,7 @@ outa
 </div>
 
 
-    <script src="index.js?r.2.2"></script>
+    <script src="index.js?r.2.3"></script>
     <!-- <script src="particlesjs-config.json"></script> -->
     <!-- <script src="particulas.js"></script> -->
     <!-- <script src="particles.min.js"></script> -->
