--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" /> -->
 
-    <link rel="stylesheet" href="index.css?r.4.10">
+    <link rel="stylesheet" href="index.css?r.4.11">
     <link rel="stylesheet" href="style.css?r.2.2">
     <link rel="stylesheet" href="contador.css?r.2.2">
     <!-- <link rel="stylesheet" href="lokos.css"> -->
     <link rel="stylesheet" href="index_anim.css?r.0">
-    <link rel="stylesheet" href="index_medias.css?r.1">
+    <link rel="stylesheet" href="index_medias.css?r.1.0">
     <style>
       /* @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap'); */
       </style>
@@ -139,10 +139,6 @@ outa
 </section> -->
 </div>
 <!----------------------------------BANNER----------------------------------------------->
-<!-- <div class="pre_banner">
-  <h3>SOBRE MI</h3>
-
-</div> -->
     <div class="banner">
       <div class="banner_text">
         <p>Soy estudiante de programación y desarrollo web, 
@@ -150,6 +146,48 @@ outa
            <a href="https://es.wikipedia.org/wiki/Desarrollador_de_software">desarrollador de Software</a> ,
         y tambien ser un experto en <a href="https://definicion.de/seguridad-informatica/">Seguridad Informatica</a> . </p>
         <!-- <p>Nuestra mission, superarlos.</p> -->
+      </div>
+    </div>
+
+    <!-- *****************************LALA********************************** -->
+
+    <div class="contenedor_lala">
+      <div class="img_lala">
+        <img src="proyecto/LALA_Logo.png" alt="">
+      </div>
+      <h3>CONVOCATORIA</h3>
+      <p>SE SOLICITA PERSONAL EN LAS SIGUIENTES ÁREAS:</p>
+
+      <div class="lala_oferta">
+        <div class="convoca entregador">
+          <h5>AYUDANTE ENTREGADOR</h5>
+          <p>-REPARTO Y DISTRIBUCION DE PRODUCTO VISITA EFECTIVA.</p>
+          <div class="sueldos">
+            <div class="salario mon">SALARIO:</div><div class="monto mon">123,458</div>
+          </div>
+        </div>
+        <div class="convoca mecanico">
+          <h5>MECÁNICO</h5>
+          <p>-CONOCIMIENTOS EN MAQUINA EN COMBUSTION INTERNA, MOTORES.</p>
+          <div class="sueldos">
+            <div class="salario mon">SALARIO:</div><div class="monto mon">236, 123, 458</div>
+          </div>
+        </div>
+        <div class="convoca calderas">
+          <h5>OPERADOR DE CALDERAS</h5>
+          <p>-ASEGURAR EL SUMINISTRO DE AGUA VAPOR Y AIRE COMPRIMIDO.</p>
+          <div class="sueldos">
+            <div class="salario mon">SALARIO:</div><div class="monto mon">236, 130, 000</div>
+          </div>
+        </div>
+        <div class="convoca preventa">
+          <h5>PROMOTOR PREVENTA</h5>
+          <p>-VISITAR A TODOS LOS CLIENTES, LEVANTAMIENTO DE PEDIDOS.</p>
+          <div class="sueldos">
+            <div class="salario mon">SALARIO:</div><div class="monto mon">16, 113, 828</div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -171,18 +209,15 @@ outa
 </div>
 
 <!-- -----------------------------SLIDER--------------------- -->
-<section class="slider">
+<!-- <section class="slider">
+
   <div class="slider_1">
     <h4>SLIDER.</h4>
-    <!-- <h6>NOTICIA NUEVA</h6> -->
-    <!-- <div class="nuevo">Nuevo***</div> -->
 <canvas id="canvas" class="canvas" ></canvas><br>
 <p> <span class="flecha" > << </span> Desliza para mover la imagen <span class="flecha"> >> </span></p>
 <input type="range" id="input_slider" class="input_slider" value="1" min="1" max="21">
   </div>
-</section>
-
-    </div>
+</section> -->
 
 <!--------------------------------CONTADOR-------------------------->
 
@@ -287,7 +322,7 @@ outa
 </div>
 
 
-    <script src="index.js?r.2.3"></script>
+    <script src="index.js?r.2.4"></script>
     <!-- <script src="particlesjs-config.json"></script> -->
     <!-- <script src="particulas.js"></script> -->
     <!-- <script src="particles.min.js"></script> -->
