--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ outa
     <!-- *****************************LALA********************************** -->
 
     <div class="contenedor_lala">
-      <div class="img_lala">
+      <!-- <div class="img_lala">
         <img src="proyecto/LALA_Logo.png" alt="">
-      </div>
+      </div> -->
       <h3>CONVOCATORIA</h3>
       <p>SE SOLICITA PERSONAL EN LAS SIGUIENTES ÁREAS:</p>
 
