--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" /> -->
 
-    <link rel="stylesheet" href="index.css?r.4.11">
+    <link rel="stylesheet" href="index.css?r.4.12">
     <link rel="stylesheet" href="style.css?r.2.2">
-    <link rel="stylesheet" href="contador.css?r.2.2">
-    <!-- <link rel="stylesheet" href="lokos.css"> -->
+    <link rel="stylesheet" href="contador.css?r.2.3">
     <link rel="stylesheet" href="index_anim.css?r.0">
-    <link rel="stylesheet" href="index_medias.css?r.1.7">
+    <link rel="stylesheet" href="index_medias.css?r.1.8">
+    <script src="scrollreveal.js"></script>
     <style>
       /* @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap'); */
       </style>
@@ -323,9 +323,8 @@ outa
 
 
     <script src="index.js?r.2.4"></script>
-    <!-- <script src="particlesjs-config.json"></script> -->
-    <!-- <script src="particulas.js"></script> -->
-    <!-- <script src="particles.min.js"></script> -->
+<script></script>
+    <script src="reveal_index.js"></script>
     <script src="https://kit.fontawesome.com/f7f35171d9.js" crossorigin="anonymous"></script>
 
     </body>
