--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link href="https://allfont.es/allfont.css?fonts=ds-digital" rel="stylesheet" type="text/css" /> -->
 
-    <link rel="stylesheet" href="index.css?r.4.12">
-    <link rel="stylesheet" href="style.css?r.2.2">
+    <link rel="stylesheet" href="index.css?r.4.13">
+    <link rel="stylesheet" href="style.css?r.2.4">
     <link rel="stylesheet" href="contador.css?r.2.3">
     <link rel="stylesheet" href="index_anim.css?r.0">
-    <link rel="stylesheet" href="index_medias.css?r.1.8">
+    <link rel="stylesheet" href="index_medias.css?r.1.9">
     <script src="scrollreveal.js"></script>
     <style>
       /* @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap'); */
@@ -42,7 +42,7 @@
 
      <ul class="cinta1">
        <div class="cerrar_lista">X</div>
-       <li> <a href="#">Servicio</a> </li>
+       <li> <a href="reloj/reloj.html">Reloj</a> </li>
        <li> <a href="#"> contacto</a></li>
        <li> <a href="#" class="suerte"> Suerte</a></li>
        <li class="software"><a href="#"> 
@@ -141,6 +141,7 @@ outa
 <!----------------------------------BANNER----------------------------------------------->
     <div class="banner">
       <div class="banner_text">
+        <a href="reloj/reloj.html" class="guacho"><span class="icon-stop-watch guacho2"></span></a>
         <p>Soy estudiante de programación y desarrollo web, 
           amante de la tecnologia.<br> Uno de mis mayores sueños es ser
            <a href="https://es.wikipedia.org/wiki/Desarrollador_de_software">desarrollador de Software</a> ,
@@ -267,7 +268,7 @@ outa
 
   </div>
 </div> 
-
+<a href="reloj/reloj.html">visitar mi html </a>
   <!--footer-->
   <div class="pie">
     <div class="redes">
